--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -10,7 +10,7 @@
             <path fill-rule="evenodd" d="M2.166 4.999A11.954 11.954 0 0010 1.944 11.954 11.954 0 0017.834 5c.11.65.166 1.32.166 2.001 0 5.225-3.34 9.67-8 11.317C5.34 16.67 2 12.225 2 7c0-.682.057-1.35.166-2.001zm11.541 3.708a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
           </svg>
         </div>
-      <% when :transaction %>
+      <% when :financial %>
         <div class="w-10 h-10 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600 dark:text-green-400" viewBox="0 0 20 20" fill="currentColor">
             <path d="M8.433 7.418c.155-.103.346-.196.567-.267v1.698a2.305 2.305 0 01-.567-.267C8.07 8.34 8 8.114 8 8c0-.114.07-.34.433-.582zM11 12.849v-1.698c.22.071.412.164.567.267.364.243.433.468.433.582 0 .114-.07.34-.433.582a2.305 2.305 0 01-.567.267z" />
@@ -37,7 +37,7 @@
         </div>
       <% end %>
     </div>
-    
+
     <%# Notification Content %>
     <div class="flex-1 min-w-0">
       <div class="flex items-start justify-between">
@@ -48,7 +48,7 @@
           <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">
             <%= notification.message %>
           </p>
-          
+
           <% if notification.metadata.present? %>
             <div class="mt-2 text-xs text-gray-500 dark:text-gray-400">
               <% notification.metadata.each do |key, value| %>
@@ -59,7 +59,7 @@
               <% end %>
             </div>
           <% end %>
-          
+
           <div class="mt-2 flex items-center text-xs text-gray-500 dark:text-gray-400">
             <% if notification.read? %>
               <span class="inline-flex items-center mr-3">
@@ -73,7 +73,7 @@
               <%= time_ago_in_words(notification.created_at) %> ago
             </span>
           </div>
-          
+
           <% if notification.action_url.present? %>
             <div class="mt-3">
               <%= link_to notification.action_url, class: "inline-flex items-center px-3 py-1.5 border border-transparent text-xs font-medium rounded-md shadow-sm text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500" do %>
@@ -85,7 +85,7 @@
             </div>
           <% end %>
         </div>
-        
+
         <%# Actions %>
         <div class="flex-shrink-0 flex ml-4">
           <div class="relative inline-block text-left" data-controller="dropdown">
@@ -95,7 +95,7 @@
                 <path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z" />
               </svg>
             </button>
-            
+
             <div class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white dark:bg-gray-800 ring-1 ring-black ring-opacity-5 focus:outline-none z-10" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" data-dropdown-target="menu">
               <div class="py-1" role="none">
                 <% if notification.read? %>
@@ -118,7 +118,7 @@
                     </div>
                   <% end %>
                 <% end %>
-                
+
                 <%= button_to dismiss_notification_path(notification), method: :delete, class: "w-full text-left block px-4 py-2 text-sm text-red-600 dark:text-red-400 hover:bg-gray-100 dark:hover:bg-gray-700" do %>
                   <div class="flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2 text-red-500 dark:text-red-400" viewBox="0 0 20 20" fill="currentColor">
