Fix undefined method 'recent' error in Transaction model and controllers

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,4 +1,4 @@
-<%# app/views/notifications/index.html.erb %>
+<% content_for :title, "Notifications" %>
 <div class="container mx-auto px-4 py-8 max-w-6xl">
   <div class="flex items-center justify-between mb-6">
     <h1 class="text-2xl font-bold text-gray-900 dark:text-white">
@@ -89,3 +89,4 @@
     <%= render 'notification', notification: @notification %>
   <% end %>
 <% end %>
+```
