--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -10,7 +10,8 @@
 
   <div class="bg-white dark:bg-gray-800 shadow rounded-lg overflow-hidden">
     <div class="p-6">
-      <%= form_with model: [:admin, @user], class: "space-y-6" do |f| %>
+      <%= form_with url: admin_user_path(@user), method: :patch, data: { turbo: false }, class: "space-y-6" do |f| %>
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <% if @user.errors.any? %>
           <div class="bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800/30 rounded-md p-4 mb-6">
             <div class="flex">
@@ -37,35 +38,35 @@
           <div class="sm:col-span-3">
             <%= f.label :username, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
             <div class="mt-1">
-              <%= f.text_field :username, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
+              <%= f.text_field "user[username]", value: @user.username, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
             </div>
           </div>
 
           <div class="sm:col-span-3">
             <%= f.label :email, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
             <div class="mt-1">
-              <%= f.email_field :email, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
+              <%= f.email_field "user[email]", value: @user.email, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
             </div>
           </div>
 
           <div class="sm:col-span-3">
             <%= f.label :phone, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
             <div class="mt-1">
-              <%= f.telephone_field :phone, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
+              <%= f.telephone_field "user[phone]", value: @user.phone, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
             </div>
           </div>
 
           <div class="sm:col-span-3">
             <%= f.label :kyc_level, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
             <div class="mt-1">
-              <%= f.select :kyc_level, User.kyc_levels.keys.map { |k| [k.capitalize, k] }, {}, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
+              <%= f.select "user[kyc_level]", User.kyc_levels.keys.map { |k| [k.capitalize, k] }, { selected: @user.kyc_level }, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
             </div>
           </div>
 
           <div class="sm:col-span-3">
             <%= f.label :status, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
             <div class="mt-1">
-              <%= f.select :status, User.statuses.keys.map { |k| [k.capitalize, k] }, {}, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
+              <%= f.select "user[status]", User.statuses.keys.map { |k| [k.capitalize, k] }, { selected: @user.status }, class: "py-2 px-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white rounded-md" %>
             </div>
           </div>
         </div>
