--- a/app/views/shared/_icons.html.erb
+++ b/app/views/shared/_icons.html.erb
@@ -661,4 +661,48 @@
   <symbol id="icon-wifi" viewBox="0 0 24 24">
     <path d="M8.111 16.404a5.5 5.5 0 017.778 0M12 20h.01m-7.08-7.071c3.904-3.905 10.236-3.905 14.141 0M1.394 9.393c5.857-5.857 15.355-5.857 21.213 0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
   </symbol>
+
+  <!-- Weather Icons -->
+  <symbol id="icon-cloud-sun" viewBox="0 0 24 24">
+    <path d="M12 2v2M4.93 4.93l1.41 1.41M20 12h2M19.07 4.93l-1.41 1.41M15.947 12.65a4 4 0 10-7.894 0H8a3 3 0 100 6h9a3 3 0 100-6h-.053z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M16 5a4 4 0 11-8 0 4 4 0 018 0z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-cloud" viewBox="0 0 24 24">
+    <path d="M17 16a3 3 0 100-6h-1.5a4.5 4.5 0 10-9 0 3 3 0 100 6h10.5z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-cloud-rain" viewBox="0 0 24 24">
+    <path d="M16 13v8M8 13v8M12 15v8M20 16.58A5 5 0 0018 7h-1.26A8 8 0 104 15.25" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-cloud-lightning" viewBox="0 0 24 24">
+    <path d="M19 16.9A5 5 0 0018 7h-1.26a8 8 0 10-11.62 9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M13 11l-4 6h6l-4 6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-wind" viewBox="0 0 24 24">
+    <path d="M9.59 4.59A2 2 0 1111 8H2m10.59 11.41A2 2 0 1014 16H2m15.73-8.27A2.5 2.5 0 1119.5 12H2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-cloud-fog" viewBox="0 0 24 24">
+    <path d="M5 5h14M5 9h14M5 13h14M5 17h14" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M17 5a4 4 0 00-8 0M17 9a4 4 0 00-8 0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-snowflake" viewBox="0 0 24 24">
+    <path d="M12 2v20M17 5l-5 5-5-5M17 19l-5-5-5 5M2 12h20M5 7l5 5-5 5M19 7l-5 5 5 5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-thermometer" viewBox="0 0 24 24">
+    <path d="M14 14.76V3.5a2.5 2.5 0 00-5 0v11.26a4.5 4.5 0 105 0z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-droplet" viewBox="0 0 24 24">
+    <path d="M12 2.69l5.66 5.66a8 8 0 11-11.31 0L12 2.69z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <symbol id="icon-umbrella" viewBox="0 0 24 24">
+    <path d="M23 12a11.05 11.05 0 00-22 0zm-5 7a3 3 0 01-6 0v-7" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
 </svg>
