Fix errors: Add loan_refinancings association to User model, fix pagination in resources view, fix path in agriculture_resources show view, add missing crop_listings new template

--- a/app/views/agriculture/base/resources.html.erb
+++ b/app/views/agriculture/base/resources.html.erb
@@ -125,10 +125,10 @@
         </div>
 
         <!-- Pagination -->
-        <% if @resources.total_pages > 1 %>
+        <% if @pagy && @pagy.pages > 1 %>
           <div class="mt-8 flex justify-center">
             <nav class="inline-flex rounded-md shadow-sm -space-x-px" aria-label="Pagination">
-              <%= paginate @resources %>
+              <%== pagy_nav(@pagy) %>
             </nav>
           </div>
         <% end %>
